Name: bugs

Version:  0.0.1
Synopsis: Library for working with Bug tracking data

Description: Library for working with Bug tracking data

Homepage:           https://github.com/jwiegley/bugs
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Development
Build-type:         Simple
Cabal-version:      >= 1.10

Extra-Source-Files: README.md

Library
    default-language:   Haskell2010
    ghc-options: -Wall
    build-depends:
        base                 >= 3 && < 5
      , mtl             >= 2.0
      , containers      >= 0.4
      , transformers    >= 0.2
      , directory       >= 1.1
      , lens
      , xml-lens
      , xml-conduit
      , conduit
      , conduit-combinators
      , conduit-extra
      , time
      , logging         >= 1.3.0
      , filepath        >= 1.3
      , temporary       >= 1.1.2.5
      , text            >= 0.11.3.1
    exposed-modules:
        Data.Bugs
    default-extensions: 
        BangPatterns
        FlexibleContexts
        OverloadedStrings

Executable bugs
    main-is: Main.hs
    ghc-options: -Wall

    build-depends: 
        base            >= 4   && < 5
      , lens
      , xml-lens
      , xml-conduit
      , conduit
      , conduit-combinators
      , conduit-extra
      , filepath        >= 1.3
      , directory       >= 1.1
      , logging         >= 1.3.0
      , containers      >= 0.4
      , transformers    >= 0.2
      , temporary       >= 1.1.2.5
      , text            >= 0.11.3.1

Test-suite test
    Type: exitcode-stdio-1.0
    Main-is: main.hs
    Hs-source-dirs: test
    Build-depends: 
        base         >= 4 && < 5
      , bugs
      , hspec        >= 1.8.3
      , logging      >= 1.3.0
      , text         >= 0.11.3.1

Source-repository head
  Type:     git
  Location: https://github.com/jwiegley/bugs

-- bugs.cabal ends here
